# gemini-clip-concat

./: .env  .gitignore  config.json  main.py  pyproject.toml  readme.md  requirements.txt  test_splitgate.py
src/: kill_processor.py
src/cli/: __init__.py  terminal.py
src/utils/: concat_gui.py  config.py  delete_files.py  file_selector.py  file_watcher.py  logging_config.py  process_monitor.py  shorts_creator.py  shorts_video_concat.py  subtitle_generator.py  token_counter.py  video_analysis.py  video_concatenator.py  video_processor.py  video_queue.py
src/utils/prompts/: README.md  __init__.py  cs2.py  custom.py  kills.py  kills2.py  league_of_legends.py  overwatch2.py  splitgate2.py  the_finals.py
src/youtube_upload_agent/: README.md  __init__.py  agent.py  browser_manager.py  cli.py  example.py  setup.py
